manifests/linkstack/linkstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkstack-deployment
  labels:
    app: linkstack
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: linkstack
  template:
    metadata:
      labels:
        app: linkstack
    spec:
      containers:
      - name: linkstack
        image: linkstackorg/linkstack 
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: linkstack-storage 
          mountPath: /htdocs
          readOnly: true
      volumes:
      - name: linkstack-storage
        persistentVolumeClaim:
          claimName: linkstack-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: linkstack-service
  labels:
    app: linkstack
spec:
  selector:
    app: linkstack 
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80 
    name: http
  - protocol: TCP
    port: 443 
    targetPort: 443 
    name: https
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkstack-ingress
  namespace: linkstack
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - links.seanchoo.top
    secretName: linkstack-tls
  rules:
  - host: links.seanchoo.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkstack-service
            port:
              number: 80
